--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
+    "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0",
-    "webpack": "^4.39.3"
+    "webpack-dev-server": "^3.8.0"
   },
   "devDependencies": {
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
